# TrumanWorld

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  action.json  codecov.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.railway  alembic.ini  pyproject.toml  railway.toml
backend/alembic/versions/: 20260308_000001_add_director_memories.py  20260308_000003_add_started_at_to_runs.py  20260308_000004_add_elapsed_seconds_to_runs.py  20260312_000003_backfill_missing_memory_columns.py  20260319_000001_rename_director_memory_target_agent_ids.py  20260319_000002_rename_director_memory_trigger_subject_alert_score.py  20260320_000001_expand_llm_calls_metadata.py  20260321_000004_add_economic_effect_logs.py  40f43097368d_llm_calls_cascade_fk.py
backend/app/: __init__.py  main.py
backend/app/agent/: config_loader.py  connection_pool.py  context_builder.py  memory_cache.py  memory_mcp_server.py  memory_mcp_server_cached.py  prompt_loader.py  providers.py  registry.py  runtime.py  system_prompt.py  working_memory.py
backend/app/agent/prompts/: planner.md  reflector.md  system.md
backend/app/api/: router.py
backend/app/api/routes/: agents.py  health.py  runs.py  (+4 more)
backend/app/cognition/: __init__.py  interfaces.py  protocols.py  registry.py  types.py
backend/app/director/: agent.py  manual_planner.py  observer.py  planner.py  service.py  strategy_engine.py  types.py
backend/app/infra/: metrics.py  settings.py  system_overview.py
backend/app/protocol/: simulation.py
backend/app/scenario/: adapter_registry.py  base.py  bundle_models.py  bundle_registry.py  factory.py  runtime_config.py  types.py
backend/app/sim/: action_resolver.py  agent_snapshot_builder.py  bootstrap.py  consequence_generator.py  context.py  conversation_scheduler.py  day_boundary.py  day_boundary_coordinator.py  delta_applier.py  economic_state_service.py  event_utils.py  governance_case_service.py  governance_consequences.py  isolated_tick_runner.py  llm_call_collector.py  llm_call_writer.py  location_utils.py  memory_constants.py  persistence.py  plan_updater.py  relationship_policy.py  run_lifecycle.py  runner.py  runtime_context_utils.py  scheduler.py  service.py  state_delta_models.py  tick_event_writer.py  tick_orchestrator.py  tick_persistence.py  types.py  world.py  world_loader.py  world_queries.py
backend/app/store/: __init__.py  models.py  repositories.py
backend/scripts/: benchmark_reactor_pooling.py
backend/tests/: conftest.py  test_agent_registry.py  test_agent_runtime.py  test_agent_session.py  test_main.py  test_runs_api.py  test_sdk_client_stability.py  test_simulation_core.py  test_simulation_service.py
backend/tests/agent/: test_agent_registry.py  test_agent_runtime.py  test_agent_session.py  test_connection_pool.py  test_llm_token_tracking.py  test_memory_cache.py  test_memory_mcp_server.py  test_provider_retry.py
backend/tests/api/: test_agents.py  test_openapi.py  test_runs.py  test_runs_runtime.py  test_runs_timeline.py
backend/tests/cognition/: test_langgraph_agent_backend.py  test_langgraph_director_backend.py  test_reactor_prompt_cache.py
backend/tests/director/: test_manual_planner.py  test_observer.py  test_planner.py  test_strategy_engine.py
backend/tests/infra/: test_settings_langgraph.py
backend/tests/integration/: test_postgres_simulation.py  test_sdk_initialize.py  test_sdk_stability.py
backend/tests/scenario/: test_bundle_registry.py  test_factory_registry.py  test_runtime_director_config.py  test_runtime_fact_resolver.py  test_runtime_governance_executor.py  test_runtime_world_config.py  test_runtime_world_design.py
backend/tests/sim/: helpers.py  test_action_resolver_free_actions.py  test_action_resolver_work_ban.py  test_bootstrap.py  test_clock_progression.py  test_conversation_scheduler.py  test_coordinator_session_isolation.py  test_core.py  test_day_boundary_memory_writes.py  test_delta_applier.py  test_economic_state_service.py  test_economic_state_service_consumption.py  test_event_utils.py  test_governance_case_service.py  test_governance_consequences.py  test_llm_call_collector.py  test_memory_constants.py  test_narrative_world_rules.py  test_performance_optimizations.py  test_plan_update.py  test_run_lifecycle.py  test_runtime_context_utils.py  test_scenarios.py  test_scheduler.py  test_service.py  test_service_isolated.py  test_service_runtime.py  test_state_delta_models.py  test_truman_world_rules.py  test_world_loader.py
backend/tests/store/: test_agent_economic_state.py  test_economic_effect_log.py  test_governance_case.py  test_repositories.py
(+229 files in other folders)
