[project]
name = "trumanworld-backend"
version = "0.1.0"
description = "楚门的世界 AI 版后端服务 | 你是导演，只能观察和创造条件——不能操控 AI 居民的想法"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.6",
    "psutil>=7.1.0",
    "prometheus-client>=0.22.0",
    "redis>=5.2.0",
    "claude-agent-sdk>=0.1.48",
    "langgraph==1.1.1",
    "langchain-anthropic==1.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit real external services or long-running environments",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
    "SIM108", # use ternary operator
    "RUF001", # ambiguous full-width characters in strings (Chinese punctuation)
    "RUF002", # ambiguous full-width characters in docstrings
    "RUF003", # ambiguous full-width colon in comments
    "TC003",  # type-checking import moved to TYPE_CHECKING block
    "TC001",  # type-checking import moved to TYPE_CHECKING block
    "TC002",  # type-checking import moved to TYPE_CHECKING block
    "SIM102", # use a single if statement instead of nested
    "SIM103", # return the condition directly
    "SIM105", # use contextlib.suppress instead of try-except-pass
    "B904",   # raise exceptions with from err or from None
    "RUF012", # mutable default class attribute
    "F841",   # local variable is assigned but never used
    "UP040",  # type alias uses TypeAlias instead of type keyword
    "SIM109", # use normalized in (...) instead of multiple comparisons
    "I001",   # import block is un-sorted or un-formatted
    "RUF059", # unpacked variable is never used
    "RUF100", # unused noqa directive
    "SIM300", # Yoda condition detected
    "SIM117", # use a single with statement with multiple contexts
    "RUF005", # consider using unpacking instead of concatenation
    "UP017",  # use datetime.UTC alias
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/main.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = true

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
